--- a/WebContent/supermap/sqlSearch.html
+++ b/WebContent/supermap/sqlSearch.html
@@ -43,7 +43,7 @@
 </div>
 <div id="map"></div>
 <script>
-    var map, local, layer, vectorLayer,
+    var map, local, layer, vectorLayer,markerLayer,
         style = {
             strokeColor: "#304DBE",
             strokeWidth: 1,
@@ -51,7 +51,8 @@
             fillOpacity: "0.8"
         },
         host = window.isLocal ? window.server : "http://support.supermap.com.cn:8090",
-        url = host + "/iserver/services/map-world/rest/maps/World";
+//         url = host + "/iserver/services/map-world/rest/maps/World";      		
+        url="http://localhost:8090/iserver/services/map-supermap_oracle_lqk2/rest/maps/riskmap_1";
     init();
     function init() {
         map = new SuperMap.Map("map", {
@@ -65,26 +66,31 @@
                 })]
         });
         map.addControl(new SuperMap.Control.LayerSwitcher(), new SuperMap.Pixel(42, 80));
-        layer = new SuperMap.Layer.TiledDynamicRESTLayer("World", url, {
+        layer = new SuperMap.Layer.TiledDynamicRESTLayer("riskmap_1", url, {
             transparent: true,
             cacheEnabled: true
         }, {maxResolution: "auto"});
         layer.events.on({"layerInitialized": addLayer});
         vectorLayer = new SuperMap.Layer.Vector("Vector Layer");
+        markerLayer = new SuperMap.Layer.Markers("Markers");
     }
 
     function addLayer() {
-        map.addLayers([layer, vectorLayer]);
+        map.addLayers([layer, vectorLayer,markerLayer]);
         map.setCenter(new SuperMap.LonLat(106.3, 37), 2);
     }
 
     function queryBySQL() {
         vectorLayer.removeAllFeatures();
-
+        var name="河北普阳钢铁有限公司";
         var queryParam, queryBySQLParams, queryBySQLService;
         queryParam = new SuperMap.REST.FilterParameter({
-            name: "Countries@World.1",
-            attributeFilter: "Pop_1994>1000000000 and SmArea>100"
+//             name: "Countries@World.1",
+			name: "RISKMAP_DISASTER_1@SUPERMAP_ORACLE_FOREVER_RISKCONTROL",
+//             RISKMAP_DISASTER_1@SUPERMAP_ORACLE_FOREVER_RISKCONTROL@@riskmap_1
+//             attributeFilter: "Pop_1994>1000000000 and SmArea>100"
+// 			attributeFilter: "SMID='"+name+"'"
+			attributeFilter: "INSUREDNAME='"+name+"'"          	
         });
         queryBySQLParams = new SuperMap.REST.QueryBySQLParameters({
             queryParams: [queryParam]
@@ -96,15 +102,29 @@
     }
 
     function processCompleted(queryEventArgs) {
-        var i, j, feature,
+        var i, j,
             result = queryEventArgs.result;
         if (result && result.recordsets) {
             for (i = 0; i < result.recordsets.length; i++) {
                 if (result.recordsets[i].features) {
                     for (j = 0; j < result.recordsets[i].features.length; j++) {
-                        feature = result.recordsets[i].features[j];
-                        feature.style = style;
-                        vectorLayer.addFeatures(feature);
+                        var feature = result.recordsets[i].features[j];
+//                         feature.style = style;
+//                         vectorLayer.addFeatures(feature);
+                        var point = feature.geometry;
+                        console.log(point);
+                        console.log('result.recordsets');
+                        console.log(point.CLASS_NAME);
+                        console.log(SuperMap.Geometry.Point.prototype.CLASS_NAME);
+                        if(point.CLASS_NAME == SuperMap.Geometry.Point.prototype.CLASS_NAME){
+                            var size = new SuperMap.Size(44, 33),
+                                    offset = new SuperMap.Pixel(-(size.w/2), -size.h),
+                                    icon = new SuperMap.Icon("../theme/images/marker.png", size, offset);
+                            markerLayer.addMarker(new SuperMap.Marker(new SuperMap.LonLat(point.x, point.y), icon));
+                        }else{
+                            feature.style = style;
+                            vectorLayer1.addFeatures(feature);
+                        }
                     }
                 }
             }
