地图：除了通过空间查询，还要根据某一条数据进行查询，比如标的地址字段

--- a/WebContent/supermap/sqlSearch.html
+++ b/WebContent/supermap/sqlSearch.html
@@ -51,7 +51,8 @@
             fillOpacity: "0.8"
         },
         host = window.isLocal ? window.server : "http://support.supermap.com.cn:8090",
-//         url = host + "/iserver/services/map-world/rest/maps/World";      		
+//         url = host + "/iserver/services/map-world/rest/maps/World"; 
+//     	iserver发布地址
         url="http://localhost:8090/iserver/services/map-supermap_oracle_lqk2/rest/maps/riskmap_1";
     init();
     function init() {
