--- a/WebContent/supermap/area.html
+++ b/WebContent/supermap/area.html
@@ -21,20 +21,23 @@ padding-top: 5px;
 padding-bottom: 10px;
 }
 </style>
-<link href='./css/bootstrap.min.css' rel='stylesheet' />
-<link href='./css/bootstrap-responsive.min.css' rel='stylesheet' />
+<!-- <link href='./css/bootstrap.min.css' rel='stylesheet' /> -->
+<!-- <link href='./css/bootstrap-responsive.min.css' rel='stylesheet' /> -->
 <script src='../libs/SuperMap.Include.js'></script>
 <script type="text/javascript">
 var host = document.location.toString().match(/file:\/\//)?"http://localhost:8090":'http://' + document.location.host;
-var map, local, layer, drawPolygon, polygonLayer;
+var map, local, layer, drawPolygon, polygonLayer,chinaNameLayer,
+serverName="http://11.205.242.31:8090/",
 style = {
-strokeColor: "#304DBE",
-strokeWidth: 2,
-pointerEvents: "visiblePainted",
-fillColor: "#304DBE",
-fillOpacity: 0.8
-},
-url=host+"/iserver/services/map-world/rest/maps/World";
+	strokeColor: "#304DBE",
+	strokeWidth: 2,
+	pointerEvents: "visiblePainted",
+	fillColor: "#304DBE",
+	fillOpacity: 0.8
+};
+var  url2="http://11.205.242.31:8090/iserver/services/map-world/rest/maps/World";
+ var url="http://11.205.242.31:8090/iserver/services/map-tianditu/rest/maps/矢量底图_经纬度";
+ var chinaNameUrl= serverName + 'iserver/services/map-tianditu/rest/maps/矢量中文注记_经纬度';
 function init(){
 //新建面矢量图层
 polygonLayer = new SuperMap.Layer.Vector("polygonLayer");
@@ -53,20 +56,22 @@ layer = new SuperMap.Layer.TiledDynamicRESTLayer("World", url, { transparent: tr
 //为图层初始化完毕添加addLayer()事件
 layer.events.on({"layerInitialized":addLayer});
 map = new SuperMap.Map("map",{controls: [
-new SuperMap.Control.LayerSwitcher(),
-new SuperMap.Control.ScaleLine(),
-new SuperMap.Control.Zoom(),
-new SuperMap.Control.Navigation({
-dragPanOptions: {
-enableKinetic: true
-}}),
-drawPolygon]
+	new SuperMap.Control.LayerSwitcher(),
+	new SuperMap.Control.ScaleLine(),
+	new SuperMap.Control.MousePosition(),
+	new SuperMap.Control.Zoom(),
+	new SuperMap.Control.Navigation({
+	dragPanOptions: {
+		enableKinetic: true
+	}}),
+	drawPolygon], allOverlays: true
 });
 }
 
 function addLayer() {
-map.addLayers([layer, polygonLayer]);
-map.setCenter(new SuperMap.LonLat(0, 0), 0);
+	chinaNameLayer = new SuperMap.Layer.TiledDynamicRESTLayer('矢量中文注记_经纬度', chinaNameUrl, { transparent: true, cacheEnabled: true });  
+	map.addLayers([layer, polygonLayer,chinaNameLayer]);
+	map.setCenter(new SuperMap.LonLat(0, 0), 0);
 }
 
 function areaMeasure(){
@@ -82,7 +87,7 @@ drawPolygon.deactivate();
 //获得图层几何对象
 var geometry = drawGeometryArgs.feature.geometry,
 measureParam = new SuperMap.REST.MeasureParameters(geometry), /* MeasureParameters：量算参数类。 客户端要量算的地物间的距离或某个区域的面积*/
-myMeasuerService = new SuperMap.REST.MeasureService(url); //量算服务类，该类负责将量算参数传递到服务端，并获取服务端返回的量算结果
+myMeasuerService = new SuperMap.REST.MeasureService(url2); //量算服务类，该类负责将量算参数传递到服务端，并获取服务端返回的量算结果
 myMeasuerService.events.on({ "processCompleted": measureCompleted });
 
 //对MeasureService类型进行判断和赋值，当判断出是LineString时设置MeasureMode.DISTANCE，否则是MeasureMode.AREA
@@ -94,13 +99,14 @@ myMeasuerService.processAsync(measureParam); //processAsync负责将客户端的
 
 //测量结束调用事件
 function measureCompleted(measureEventArgs) {
-var area = measureEventArgs.result.area,
-unit = measureEventArgs.result.unit;
-alert("量算结果:"+ area + "平方米");
+	alert('111')
+	var area = measureEventArgs.result.area,
+	unit = measureEventArgs.result.unit;
+	alert("量算结果:"+ area + "平方米");
 }
 //移除图层要素
 function clearFeatures(){
-polygonLayer.removeAllFeatures();
+	polygonLayer.removeAllFeatures();
 }
 </script>
 </head>
