--- a/WebContent/supermap/circleSearch2.html
+++ b/WebContent/supermap/circleSearch2.html
@@ -5,7 +5,7 @@
         <title>几何查询</title>
         <script src='../libs/SuperMap.Include.js'></script>
         <script type="text/javascript">
-            var map, local, layer, vectorLayer, vectorLayer1, drawPolygon, markerLayer,drawPoint, drawLine,
+            var map, local, layer, vector,vectorLayer, vectorLayer1, drawPolygon, markerLayer,drawPoint, drawLine,
             style = {
                 strokeColor: "#304DBE",
                 strokeWidth: 1,
@@ -19,7 +19,8 @@
 // 			url="http://localhost:8090/iserver/services/map-supermap_oracle_lqk2/rest/maps/Countries@World1";
 // 			url="http://localhost:8090/iserver/services/map-supermap_oracle_lqk/rest/maps/Countries@World";
 			url="http://localhost:8090/iserver/services/map-china400/rest/maps/China_4326";
-			url2="http://localhost:8090/iserver/services/map-supermap_oracle_lqk3/rest/maps/China_Province_pg@China";
+// 			url2="http://localhost:8090/iserver/services/map-supermap_oracle_lqk3/rest/maps/China_Province_pg@China";
+			url2="http://localhost:8090/iserver/services/map-supermap_oracle_lqk/rest/maps/RISKMAP_ADDRESS_1@SUPERMAP_ORACLE_FOREVER_RISKCONTROL";
 
             function init(){
             	 layer = new SuperMap.Layer.TiledDynamicRESTLayer("China_4326", url, {transparent: true, cacheEnabled: true}, {maxResolution:"auto"});
@@ -27,6 +28,7 @@
                 layer.events.on({"layerInitialized":addLayer});
                 vectorLayer = new SuperMap.Layer.Vector("Vector Layer");
                 vectorLayer1 = new SuperMap.Layer.Vector("Vector Layer1");
+                vector = new SuperMap.Layer.Vector("vectorLayer");
                 markerLayer = new SuperMap.Layer.Markers("Markers");
 
 
@@ -61,10 +63,35 @@
                         }}),
                     drawPolygon1,drawPolygon2,drawPoint,drawLine,drawRectangle]
                 });
+                map.events.on({
+//              	   "mouseup":openInfoWin
+             	"mousemove":openInfoWin
+             	});
+//                 openInfoWin();
             }
+            function openInfoWin(evt){
+//                 console.log(evt)
+                var pixel = new SuperMap.Pixel(evt.xy.x,evt.xy.y),
+//                 var pixel = new SuperMap.Pixel(100,39.3),
+          			lonlat = map.getLonLatFromPixel(pixel);
+// 				console.log(lonlat);
+                var point1 = new SuperMap.Geometry.Point(lonlat.lon,lonlat.lat);
+            	var pointlayer1 =new SuperMap.Feature.Vector(point1);
+            	pointlayer1.style={
+            		cursor:"auto",
+//             		fillColor:"#FFF",
+//             		strokeColor:"yellow",
+//             		pointRadius:0.001
+            		labelXOffset : 30000,
+                    labelYOffset : 20000
+            	};
+            	vector.addFeatures([pointlayer1]);
+            	
+			}
 
             function addLayer() {
-                map.addLayers([layer, vectorLayer, vectorLayer1, markerLayer]);
+            	alert('2')
+                map.addLayers([layer, vectorLayer, vectorLayer1, markerLayer,vector]);
                 map.setCenter(new SuperMap.LonLat(0, 0), 0);
             }
             function clearStatus(){
@@ -124,9 +151,9 @@
 //                 			});
 
 //                 PRPCADDRESS_1@SUPERMAP_ORACLE_FOREVER_RISKCONTROL@@China_Province_pg@China  
-                queryParam = new SuperMap.REST.FilterParameter({
+                queryParam = new SuperMap.REST.FilterParameter({               	
         			name:"PRPCADDRESS_1@SUPERMAP_ORACLE_FOREVER_RISKCONTROL"
-//         			name:"China_Province_pg@China"
+//         			name:"RISKMAP_ADDRESS_1@SUPERMAP_ORACLE_FOREVER_RISKCONTROL"
         			});
 //                 queryParam = new SuperMap.REST.FilterParameter({
 // //         	 		attributeFilter: "Pop_1994>1000000000 and SmArea>100",                			
