--- a/WebContent/supermap/featureEdit.html
+++ b/WebContent/supermap/featureEdit.html
@@ -34,10 +34,10 @@ style = {
 	fillOpacity: 0.8,
 	pointRadius:2
 },
-url1=host+"/iserver/services/map-jingjin/rest/maps/京津地区土地利用现状图",
-url2=host+"/iserver/services/data-jingjin/rest/data/datasources/Jingjin/datasets/Landuse_R",
+url1="http://10.10.1.156:8090/iserver/services/map-jingjin/rest/maps/京津地区土地利用现状图",
+url2="http://10.10.1.156:8090/iserver/services/data-jingjin/rest/data/datasources/Jingjin/datasets/Landuse_R",
 // url2=host+"/iserver/services/data-jingjin/rest/data/datasources/name/Jingjin/datasets/name/Landuse_R/",
-url3=host+"/iserver/services/data-jingjin/rest/data/";
+url3="http://10.10.1.156:8090/iserver/services/data-jingjin/rest/data/";
 
 
 // url1="http://localhost:8090/iserver/services/map-supermap_oracle_lqk2/rest/maps/riskmap_1",
