--- a/WebContent/supermap/pointTogether.html
+++ b/WebContent/supermap/pointTogether.html
@@ -12,7 +12,8 @@
 <script type="text/javascript">
 var host = document.location.toString().match(/file:\/\//)?"http://localhost:8090":'http://' + document.location.host;
 var map, layer,clusterLayer,infowin,
-url=host+"/iserver/services/map-changchun/rest/maps/长春市区图";
+// url="http://10.10.1.156:8090/iserver/services/map-changchun/rest/maps/长春市区图";
+url="http://10.10.2.241:8091/iserver/services/map-changchun/rest/maps/长春市区图";
 var styleLine = {
 	strokeColor: "black",
 	strokeWidth: 1,
@@ -110,7 +111,6 @@ function addLayer(){
 // 	var fs1 = getFeatures();
 	var fs1 =getInfo();
 	clusterLayer.addFeatures(fs1);
-
 	
 }
 
