--- a/WebContent/supermap/search/IdSearch.html
+++ b/WebContent/supermap/search/IdSearch.html
@@ -22,7 +22,7 @@ padding-bottom: 10px;
 </style>
 <!-- <link href='./css/bootstrap.min.css' rel='stylesheet' /> -->
 <!-- <link href='./css/bootstrap-responsive.min.css' rel='stylesheet' /> -->
-<script src='../libs/SuperMap.Include.js'></script>
+<script src='../../libs/SuperMap.Include.js'></script>
 <script type="text/javascript">
 var host = document.location.toString().match(/file:\/\//)?"http://localhost:8090":'http://' + document.location.host;
 var map, local, layer, vectorLayer,
