--- a/WebContent/supermap/twoMap.html
+++ b/WebContent/supermap/twoMap.html
@@ -40,8 +40,8 @@
 // 	var url="http://10.10.1.156:8099/iserver/services/map-china400/rest/maps/China_4326";
 // 	var url2="http://localhost:8090/iserver/services/map-supermap_oracle_lqk3/rest/maps/RISKMAP_DISASTER2_1@SUPERMAP_ORACLE_FOREVER_RISKCONTROL";
 	
-	var url="http://localhost:8090/iserver/services/map-wmts-vec/rest/maps/vec";
-	var url2="http://localhost:8090/iserver/services/map-BaoYu4/rest/maps/rain_hazard_scale_1_1@暴雨";
+	var url="http://10.10.2.241:8091/iserver/services/map-tianditu/rest/maps/矢量底图_经纬度";
+	var url2="http://10.10.2.241:8091/iserver/services/map-tianditu/rest/maps/矢量中文注记_经纬度";
 	
 	
 // 	var url2="http://localhost:8090/iserver/services/map-togetherAll/rest/maps/rain_daily_5a_test@together";
@@ -65,15 +65,15 @@
 // // 		,new SuperMap.Pixel("SuperMap.Pixel.Mode.LeftTop")
 // 		,new SuperMap.Pixel("SuperMap.Pixel.Mode.RightTop")
 // 		);
-		layerWorld = new SuperMap.Layer.TiledDynamicRESTLayer("vec", url, {transparent: true, cacheEnabled: false,isBaseLayer:true});
+		layerWorld = new SuperMap.Layer.TiledDynamicRESTLayer("矢量底图_经纬度", url, {transparent: true, cacheEnabled: false,isBaseLayer:true});
 		layerWorld.events.on({"layerInitialized": addLayer1});
 	}
 	
 	
 	function addLayer1(){
-		layerJingjing = new SuperMap.Layer.TiledDynamicRESTLayer("rain_hazard_scale_1_1@暴雨", url2, {transparent: true, cacheEnabled: false});
+		layerJingjing = new SuperMap.Layer.TiledDynamicRESTLayer("T201602@windNewData2016", url2, {transparent: true, cacheEnabled: false});
 		layerJingjing.events.on({"layerInitialized": addLayer2});
-		layerJingjing.setOpacity(0.6);
+// 		layerJingjing.setOpacity(0.6);
 	}
 	function addLayer2(){
 		//增加点聚合
@@ -107,6 +107,21 @@
 		var fs1 =getInfo();
 		clusterLayer.addFeatures(fs1);
 	}
+	function add (){
+// 		var layerUrl="http://10.10.2.241:8091/iserver/services/map-typhoon_wind/rest/maps/T201602@windNewData2016";
+// 		var layerUrl="http://10.10.2.242:8095/iserver/services/map-yphoon_wind/rest/maps/T201602@windNewData2016";		
+		var layerUrl="http://10.10.2.241:8091/iserver/services/map-yphoon_wind/rest/maps/T201602@windNewData2016";
+		var themeLayer = new SuperMap.Layer.TiledDynamicRESTLayer("T201602@windNewData2016", layerUrl, { transparent: true, cacheEnabled: true })
+//         that.riskMapTyphoonData.typhoonThemeLayers.push(themeLayer)
+		var  that = this
+        themeLayer.events.on({
+          "layerInitialized": function (evt) {
+            map.addLayer(themeLayer)
+//             that.map.raiseLayer(themeLayer, -1)
+          }
+        })
+        themeLayer.setOpacity(0.5)
+		}
 	function getInfo(){
 		var ps = [];
 		for(var i=0;i<100;i++){
@@ -128,6 +143,9 @@
 </script>
 </head>
 <body onload="init()">
-	<div id="map" style="width:100%;heigth:100%"></div>
+<div id="toolbar">
+	<input type="button" class="btn" value="查询" onclick="add()" />
+</div>
+	<div id="map" style="width:100%;heigth:800px"></div>
 </body>
 </html>
