XWPFTemplate转化成word文档

--- a/WebContent/supermap/pointTogether.html
+++ b/WebContent/supermap/pointTogether.html
@@ -11,9 +11,10 @@
 <!-- <script src='./data/changchundata.js'></script>该文件中保存了长春地图的一些兴趣点 -->
 <script type="text/javascript">
 var host = document.location.toString().match(/file:\/\//)?"http://localhost:8090":'http://' + document.location.host;
-var map, layer,clusterLayer,infowin,
+var map, layer,clusterLayer,infowin, 
 // url="http://10.10.1.156:8090/iserver/services/map-changchun/rest/maps/长春市区图";
-url="http://10.10.2.241:8091/iserver/services/map-changchun/rest/maps/长春市区图";
+// url="http://10.10.2.241:8091/iserver/services/map-changchun/rest/maps/长春市区图";
+url="http://10.10.2.241:8091/iserver/services/map-FXDT/rest/maps/china_province@areakind";
 var styleLine = {
 	strokeColor: "black",
 	strokeWidth: 1,
